update image Hero

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <br>
     <!-- Hero -->
     <div class="px-4 text-center">
-      <img class="d-block mx-auto img-hero" src="/Assets/img/Cook.webp">
+      <img class="d-block mx-auto img-hero" src="Assets/img/Cook.webp">
       <h1 class="display-5 fw-bold text-body-emphasis">Dapurceumil</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Indulge in culinary excellence at our restaurant. Our talented chefs create innovative dishes that blend traditional flavors with modern techniques. Experience the perfect dining ambiance, from cozy intimate settings to vibrant social spaces. Whether you're celebrating a special occasion or simply enjoying a night out, our restaurant offers an unforgettable dining experience.
